- optimize：优化为不可变列表转换，序列化时无需考虑是否可变问题；